solar-system/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: solar-system
  name: solar-system
  namespace: solar-system
spec:
  selector:
    matchLabels:
      app: solar-system
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      # imagePullSecrets:
      # - name: my-ecr-registry-key
      containers:
      - name: solar-system
        image: chinmayapradhan/orbit-engine:0a6325843bd4ad9e21ca6bb9bdcb65224a5bdf46
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http 
          protocol: TCP
