solar-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system
  namespace: solar-system
spec:
  selector:
    app: solar-system
  ports:
  - port: 3000
    targetPort: 30000
  type: LoadBalancer
